fix: update loyalty tests